; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Logging.c_InsertUnicodeRecord.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Logging.c_InsertUnicodeRecord.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @InsertUnicodeRecord(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %12, label %9

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %9, %2
  br label %29

13:                                               ; preds = %9
  %14 = load i32*, i32** %4, align 8
  %15 = call i64 @CalcUniToUtf8(i32* %14)
  %16 = add nsw i64 %15, 32
  store i64 %16, i64* %6, align 8
  %17 = load i64, i64* %6, align 8
  %18 = call i8* @ZeroMalloc(i64 %17)
  store i8* %18, i8** %5, align 8
  %19 = load i8*, i8** %5, align 8
  %20 = bitcast i8* %19 to i32*
  %21 = load i64, i64* %6, align 8
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @UniToUtf8(i32* %20, i64 %21, i32* %22)
  %24 = load i32*, i32** %3, align 8
  %25 = load i8*, i8** %5, align 8
  %26 = call i32 @InsertStringRecord(i32* %24, i8* %25)
  %27 = load i8*, i8** %5, align 8
  %28 = call i32 @Free(i8* %27)
  br label %29

29:                                               ; preds = %13, %12
  ret void
}

declare dso_local i64 @CalcUniToUtf8(i32*) #1

declare dso_local i8* @ZeroMalloc(i64) #1

declare dso_local i32 @UniToUtf8(i32*, i64, i32*) #1

declare dso_local i32 @InsertStringRecord(i32*, i8*) #1

declare dso_local i32 @Free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
